* #2037989: Registration notification sent twice (real_therplima)
* bug with modules when calling editors. (stranger)
* bug "Cannot redeclare class XoopsFormCaptcha". (stranger)
* Language constants in IcmsModuleAbout feature (malanciault)
* bug with pdf generator. (stranger)
* bug Hidencontent doesn`t work with TinyMCE. (stranger)
* # 2090834: Customtag works not with TinyMCE (malanciault)
* # 2046097: rss admin news no longer works  (malanciault)

===2008-08-08 : 1.1 Beta 1===

'''Added'''
* new plugin for tinymce. hiddencontent (luciorota/real_therplima/stranger)
* Password meter op on installation. (stranger/real_therplima)
* Upgrade script 1.0 --> 1.1beta. (stranger)
* new field to let user select if they want to sho their openid. (stranger)
* new warning to let users know about upgrading system module. (stranger)
* new warning to search if trust_path is defined. (stranger)
* new warning to let users know about protector with credits to GIJOE. (stranger)
* Upgrade script XOOPS2.2.x --> ImpressCMS. (stranger/phppp)
* function "_filterImgUrl" to module.sanitizer, to keep compatibility with D3 modules.. (stranger/minahito/hodaka)
* added 3 content alignments for dhtml text editor. (stranger)
* Upgrade script XOOPS2.3 --> ImpressCMS. (stranger)
* icms.css loads from the header. (stranger)
* pdf.php in language files. (stranger)
* system skips all folders with no theme.html. (nekro/stranger)
* new function: icms_utf8_strrev() - Allows reversing of strings for utf8 character sets. (vaughan)
* reset/expired password system - when encryption changed, pass is expired, you need to then reset your password before logging in. (vaughan)
* reset password page. user must enter registered email, username, current password & then enter new password in order to reset pass. (vaughan)
* improved language and template of the password rest feature (malanicault)
* addition of the pre-populated uname in the password reset form (malanciault)

'''Improved'''