@@ -29,7 +29,8 @@ ImpressCMS ChangeLog
 * bug with pdf generator. (stranger)
 * bug Hidencontent doesn`t work with TinyMCE. (stranger)
 * # 2090834: Customtag works not with TinyMCE (malanciault)
-* # 2046097: rss admin news no longer works  (malanciault)
+* # 2046097: RSS admin news no longer works  (malanciault)
+* # 2046097: Updating rss_local config with correct info (if value was not previously changed by user) (malanciault)
 
 ===2008-08-08 : 1.1 Beta 1===
 
